--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </section>
 <section class="sobre">
     <h1>Movidos por um sonho!</h1>
-    <h4>A Maze nasceu para: criar, auxiliar e ajudar</h4>
+    <h4 class="t">A Maze nasceu para: criar, auxiliar e ajudar</h4>
     <button class="c"><a href="#">Saiba mais</a></button>
 </section>
 <section class="contat">
